Fixing z-index issue

--- a/style.css
+++ b/style.css
@@ -228,14 +228,14 @@ main {
     transition: .3s all cubic-bezier(0.38, -0.03, 0.43, 1.43);
     position: fixed;
     bottom: 0;
-    z-index: 1;
+    z-index: 3;
     transform: translateY(100%);
 }
 
 #halo.show {
     position: fixed;
     bottom: 0;
-    z-index: 3;
+    z-index: 4;
     transform: translateY(0%);
 }
 
@@ -251,6 +251,6 @@ main {
 #bang.show {
     position: fixed;
     bottom: 0;
-    z-index: 3;
+    z-index: 5;
     transform: translateY(0%);
 }
